--- a/html/contato.html
+++ b/html/contato.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - KingBank</title>
-    <link rel="stylesheet" href="/css/extrato.css">
-    </style>
+    <link rel="stylesheet" href="/css/contato.css">
 </head>
 
 <body>
@@ -29,6 +28,7 @@
                     Conta</a></li>
         </ul>
     </nav>
+    
     <main>
         <div class="contact-container">
             <h2>Entre em Contato Conosco</h2>
@@ -41,9 +41,6 @@
             </form>
         </div>
     </main>
-    <footer>
-        <p>&copy; 2024 KingBank. Todos os direitos reservados.</p>
-    </footer>
 </body>
 
 </html>
