--- a/html/cartao.html
+++ b/html/cartao.html
@@ -25,8 +25,8 @@
             </li>
             <li><a href="emprestimo.html"><i class="fas fa-hand-holding-usd"></i> Empréstimos</a></li>
             <li><a href="contato.html"><i class="fas fa-envelope"></i> Contato</a></li>
-            <li style="float:right"><a class="active" href="index.html"><i class="fas fa-sign-out-alt"></i> Sair da
-                    Conta</a></li>
+            <li style="float:right"><a class="active" href="/index.html"><i class="fas fa-sign-out-alt"></i> Sair da
+                Conta</a></li>
         </ul>
     </nav>
 
