--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
             <ul class="nav nav-tabs" role="tablist">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="html/suporte.html">Suporte</a></li>
-                <li><a href="html/contato.html">CSS</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="html/contato.html">Contato </a></li>
+                <li><a href="#">Programas</a></li>
             </ul>
         </nav>
     </div>
