--- a/html/extrato.html
+++ b/html/extrato.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KingBank | Extrato</title>
     <link rel="stylesheet" type="text/css" href="/css/extrato.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body>
@@ -15,16 +16,16 @@
             <li class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn"><i class="fas fa-money-bill"></i> Pagamentos</a>
                 <div class="dropdown-content">
-                    <a href="#"><i class="fas fa-wallet"></i> Saldo Bancário</a>
+                    <a href="saldo.html"><i class="fas fa-wallet"></i> Saldo Bancário</a>
                     <a href="extrato.html"><i class="fas fa-receipt"></i> Extrato</a>
                     <a href="cartao.html"><i class="fas fa-credit-card"></i> Cartões</a>
-                    <a href="#"><i class="fas fa-money-check-alt"></i> Pix</a>
+                    <a href="pix.html"><i class="fas fa-money-check-alt"></i> Pix</a>
                 </div>
             </li>
             <li><a href="emprestimo.html"><i class="fas fa-hand-holding-usd"></i> Empréstimos</a></li>
             <li><a href="contato.html"><i class="fas fa-envelope"></i> Contato</a></li>
-            <li style="float:right"><a class="active" href="index.html"><i class="fas fa-sign-out-alt"></i> Sair da
-                    Conta</a></li>
+            <li style="float:right"><a class="active" href="/index.html"><i class="fas fa-sign-out-alt"></i> Sair da
+                Conta</a></li>
         </ul>
     </nav>
 
