--- a/html/sistema.html
+++ b/html/sistema.html
@@ -19,15 +19,15 @@
             <li class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn"><i class="fas fa-money-bill"></i> Pagamentos</a>
                 <div class="dropdown-content">
-                    <a href="#"><i class="fas fa-wallet"></i> Saldo Bancário</a>
+                    <a href="saldo.html"><i class="fas fa-wallet"></i> Saldo Bancário</a>
                     <a href="/html/extrato.html"><i class="fas fa-receipt"></i> Extrato</a>
                     <a href="/html/cartao.html"><i class="fas fa-credit-card"></i> Cartões</a>
-                    <a href="#"><i class="fas fa-money-check-alt"></i> Pix</a>
+                    <a href="/html/pix.html"><i class="fas fa-money-check-alt"></i> Pix</a>
                 </div>
             </li>
             <li><a href="/html/emprestimo.html"><i class="fas fa-hand-holding-usd"></i> Empréstimos</a></li>
             <li><a href="/html/contato.html"><i class="fas fa-envelope"></i> Contato</a></li>
-            <li style="float:right"><a class="active" href="index.html"><i class="fas fa-sign-out-alt"></i> Sair da
+            <li style="float:right"><a class="active" href="/index.html"><i class="fas fa-sign-out-alt"></i> Sair da
                     Conta</a></li>
         </ul>
     </nav>
