--- a/index.html
+++ b/index.html
@@ -6,31 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KingBank - Login</title>
     <script src="JS/index.js"></script>
+    <link rel="shortcut icon" type="image/png" href="">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url(Img/n1bank.jpeg);
-            background-size: cover;
-            background-position: center;
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            color: #fff;
+            overflow: hidden;
+            /* Evitar que o vídeo cause uma barra de rolagem */
         }
+
+        #video-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            z-index: -1;
+            /* Colocando o vídeo atrás do conteúdo */
+        }
+
+        video {
+            position: absolute;
+            top: 0%;
+            left: 0;
+            width: 100%;
+            height: auto;
+        }
+
 
         nav {
             background-color: #4d4444;
             padding: 10px 0;
             text-align: center;
+
+            border-bottom: none;
+            /* Remover a linha branca */
         }
 
         nav a {
-            color: #fff;
+            color: #ffffff;
             text-decoration: none;
             margin: 0 15px;
             padding: 10px 20px;
@@ -48,48 +69,74 @@
             text-align: center;
         }
 
-        .login-container {
-            position: relative;
-        }
-
         .option {
             cursor: pointer;
             text-align: center;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            max-width: 300px;
-            transition: transform 0.3s, background-color 0.3s;
+            background-color: transparent;
+            border-radius: 5px;
+            /* Alterando o border-radius para criar um retângulo */
+            border: 5px solid transparent;
+            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+            /* Adicionando uma sombra para destacar o retângulo */
+            max-width: 100%;
+            margin-top: 5px;
+            transition: transform 0.3s, background-color 0.3s, border-color 0.3s;
+            display: inline-block;
+            line-height: 50px;
+        }
+
+        .option h3 {
+            font-size: 19px;
+            background-color: transparent;
+            margin: 0;
         }
 
         .option:hover {
             transform: translateY(-5px);
-            background-color: #f0f0f0;
+            background-color: #000000;
+            border-color: #000000;
+            /* Alterando a cor da borda ao passar o mouse */
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+            /* Adicionando uma sombra mais intensa ao passar o mouse */
         }
 
+
+        .login-container {
+
+            margin-right: 30px;
+            /* Adicionar uma margem direita para espaçamento */
+        }
+
+        /* Estilos para o formulário de login */
         .login-form {
+            background: linear-gradient(to bottom, #663300 30%, #996633 91%);
             display: none;
-            position: absolute;
-            top: 100%;
-            right: 0;
+            position: fixed;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            width: 80%;
+            max-width: 400px;
             padding: 20px;
-            background-color: #fff;
+            background-color: #784d4d;
             border-radius: 10px;
             box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
+            z-index: 999;
+            /* Garantindo que o formulário fique acima de outros elementos */
         }
 
-        .login-form.show-login {
-            display: block;
-        }
 
+
+        /* Estilos para os inputs do formulário */
         .login-form input[type="text"],
         .login-form input[type="password"],
         .login-form input[type="email"],
-        .login-form input[type="submit"] {
+        .login-form button {
             width: calc(100% - 40px);
+            /* Ajuste a largura dos inputs e botões */
             padding: 10px;
-            margin: 10px 0;
+            margin: 10px auto;
+            /* Centralize verticalmente os inputs e botões */
             display: block;
             border: none;
             border-radius: 25px;
@@ -97,60 +144,94 @@
             font-size: 16px;
         }
 
-        .login-form input[type="submit"] {
-            background-color: #007bff;
+        /* Estilos para o botão "Esqueceu a senha?" */
+        .login-form .button {
+            background-color: transparent;
             color: #fff;
+            text-decoration: underline;
             cursor: pointer;
-            transition: background-color 0.3s;
+            border: none;
+            transition: color 0.3s;
         }
 
-        .login-form input[type="submit"]:hover {
-            background-color: #0056b3;
+        .login-form .button:hover {
+            color: #ccc;
+        }
+
+        /* Estilos para o formulário de login quando estiver visível */
+        .show-login {
+            display: block !important;
+            /* Tornando o formulário visível */
+        }
+
+
+        .nav nav-tabs {
+            background-color: #000000;
         }
     </style>
 </head>
 
 <body>
-    <header>
-        <h1>KingBank</h1>
-    </header>
-    <div class="container">
-        <nav>
-            <ul class="nav nav-tabs" role="tablist">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="#">Suporte</a></li>
-                <li><a href="html/contato_home.html">Contato </a></li>
-                <li><a href="#">Programas</a></li>
-                <li>
-                    <div class="login-container">
-                        <div class="option" onclick="mostrarLogin()">
-                            <h3>Acessar</h3>
-                        </div>
-                        <div class="login-form" id="loginContainer">
-                            <h2>Faça Login</h2>
-                            <form method="post">
-                                <input type="text" id="username" name="username" placeholder="Nome de Usuário" required>
-                                <input type="password" id="password" name="password" placeholder="Senha" required>
-                                <input type="email" id="email" name="email" placeholder="Email" required>
-                                <button type="button" class="meu-botao" onclick="entrarSite()">Entrar</button>
-                                <button type="button" class="button" onclick="TrocaSenha()">Esqueceu a senha?</button>
-                            </form>
-                        </div>
+
+    <nav>
+        <ul class="nav nav-tabs" role="">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="#">Suporte</a></li>
+            <li><a href="html/contato_home.html">Contato </a></li>
+            <li><a href="#">Programas</a></li>
+            <li style="float: right;">
+                <div class="login-container">
+                    <div class="option" onclick="mostrarLogin()">
+                        <h3 style="color: rgb(255, 255, 255);">Acessar</h3>
                     </div>
-                </li>
-            </ul>
-        </nav>
+                    <div class="login-form" id="loginContainer">
+                        <h2>Faça Login</h2>
+                        <form method="post">
+                            <input type="text" id="username" name="username" placeholder="Nome de Usuário" required>
+                            <input type="password" id="password" name="password" placeholder="Senha" required>
+                            <input type="email" id="email" name="email" placeholder="Email" required>
+                            <button type="button" class="meu-botao" onclick="entrarSite()">Entrar</button>
+                            <button type="button" class="button" data-toggle="modal" data-target="#forgotPasswordModal">Esqueceu a senha?</button>
+                        </form>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </nav>
+    <!-- Modal de recuperação de senha -->
+    <div id="forgotPasswordModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Conteúdo do modal -->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Esqueceu a Senha?</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Insira seu endereço de e-mail abaixo para redefinir sua senha.</p>
+                    <form>
+                        <div class="form-group">
+                            <label for="email">Endereço de E-mail:</label>
+                            <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Enviar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="video-container">
+        <video autoplay loop muted>
+            <source src="/Img/X.mp4" type="video/mp4">
+        </video>
     </div>
 
-    <footer>
-        <p>&copy; 2024 KingBank. Todos os direitos reservados.</p>
-    </footer>
+
+
 
     <script>
-        function mostrarLogin() {
-            var loginForm = document.getElementById("loginContainer");
-            loginForm.classList.toggle("show-login");
-        }
+
+
     </script>
 </body>
 
