--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </div>
     <div id="video-container">
         <video autoplay loop muted>
-            <source src="/Img/X.mp4" type="video/mp4">
+            <source src="Img/X.mp4" type="video/mp4">
         </video>
     </div>
 
