--- a/html/contato.html
+++ b/html/contato.html
@@ -42,6 +42,15 @@
             </form>
         </div>
     </main>
+
+    <script>
+        // Array estático de contatos
+        var contatos = [
+            { nome: 'João Silva', email: 'joao@example.com' },
+            { nome: 'Maria Santos', email: 'maria@example.com' },
+            { nome: 'Pedro Oliveira', email: 'pedro@example.com' }
+        ];
+    </script>
 </body>
 
 </html>
